--- a/Task7/views/start.ejs
+++ b/Task7/views/start.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
      <form action="/weather" method="get">
-          <button>TASK 7</button>
+          <button>Weather-App</button>
      </form>
 </body>
 </html>
